# trading-platform

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  README.md
apps/examples/: CMakeLists.txt
apps/examples/app/: CMakeLists.txt  main.cpp
apps/examples/app_example/: app.json
apps/examples/config_example/: CMakeLists.txt
apps/examples/http_client/: CMakeLists.txt  main.cpp
apps/examples/http_client/config/: http_client.json
apps/examples/logger/: CMakeLists.txt
apps/examples/ws_client/: CMakeLists.txt  main.cpp
apps/md/binance/: CMakeLists.txt  main.cpp
apps/md/binance_md_capture/: AppConfig.h  CMakeLists.txt  MDCaptureConfig.h  main.cpp
apps/md/binance_md_capture/config/: binance_md_capture.json
apps/md/binance_symbol_provider/: AppConfig.h  AsioService.h  BinanceSymbolClient.h  CMakeLists.txt  FileSymbolStore.h  LoggerNode.h  MDEvents.h  SymbolProviderConfig.h  main.cpp
apps/md/binance_symbol_provider/config/: binance_symbol_provider.json
apps/sandbox/: CMakeLists.txt  add_sandbox_app.py
apps/sandbox/app_example/: CMakeLists.txt  main.cpp
apps/sandbox/config_example/: CMakeLists.txt  example_config.h  main.cpp
apps/sandbox/logger_example/: CMakeLists.txt  main.cpp
core/: README.md  assembly.h  dgate.h  enum.h  relay.h
core/app/: LogConfig.h  LogLevel.h  configLocator.h  init.h  logging.h
core/assembly/: assembly.h  relay.h
core/config/: config.h
core/io/: Events.h  HTTPS.h  HTTPSClient.h  WSS.h
core/util/: enum.h  url.h
docker/: Docker_install.sh  Dockerfile
market/: Events.h
tests/: CMakeLists.txt  README.md  register_unit_test.cmake
tests/core/: assembly_test.cxx  complex_relay_test.cxx  dgate_test.cxx  enum_test.cxx  relay_test.cxx  url_test.cxx
tests/example/: example_test.cxx
